syntax = "proto3";

package pb;

option go_package = "github.com/paweldyl/blog-backend/pb";

message DeletePostLikeRequest {
    string post_id = 1;
}


