syntax = "proto3";

package pb;

import "google/protobuf/empty.proto";

import "post_like/rpc_put_post_like.proto";
import "post_like/rpc_get_post_like.proto";
import "post_like/rpc_delete_post_like.proto";

option go_package = "github.com/paweldyl/blog-backend/pb";

service PostLikeService {
  rpc PutPostLike (PutPostLikeRequest) returns (PutPostLikeResponse) {}
  rpc GetPostLike (GetPostLikeRequest) returns (GetPostLikeResponse) {}
  rpc DeletePostLike (DeletePostLikeRequest) returns (google.protobuf.Empty) {}
}